<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>david</groupId>
	<artifactId>AdventOfCode</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<dependencies>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>31.1-jre</version>
		</dependency>

		<dependency>
			<groupId>org.wso2.orbit.org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0.wso2v1</version>
		</dependency>
		
		<dependency>
    		<groupId>org.congocc</groupId>
    		<artifactId>org.congocc.parser.generator</artifactId>
    		<version>2.0.0-RC5</version>
		</dependency>

	</dependencies>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>23</release>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>